<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationForm.Register">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:layout_marginTop="10dp"
        android:hint="@string/edtxt_firstName"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lname"
        android:layout_marginTop="10dp"
        android:hint="@string/edtxt_lastName"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:hint="@string/edtxt_enterEmail"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pword"
        android:hint="@string/edtxt_enterPass"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cofirm"
        android:hint="@string/edtxt_confPass"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Register"
            android:text="@string/btn_createAcc"
            android:layout_marginStart="20dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/btn_cancel"
            android:layout_marginStart="80dp"
            />
    </LinearLayout>
</LinearLayout>