<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationForm.MainRegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:text="@string/txt_diagnosis_detail" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/edtxt_diagnosis_detail"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt_age" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/edtxt_enter_age"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/button_contact"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-3dp"
        android:layout_marginBottom="451dp"
        android:onClick="contactPermision"
        android:text="@string/btb_patient_name" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/edtxt_patient_name"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:onClick="update"
        android:text="@string/btn_update2" />

    <Button
        android:id="@+id/button_Delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_update"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-63dp"
        android:onClick="delete"
        android:text="@string/btn_delete" />

    <Button
        android:id="@+id/button_retrive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="74dp"
        android:onClick="retrieve"
        android:text="@string/btn_retrieve" />

    <Button
        android:id="@+id/button_addData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_Delete"
        android:layout_alignEnd="@+id/editText3"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="-20dp"
        android:onClick="addData"
        android:text="@string/btn_adddata" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_update"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/btn_enter_id"
        android:inputType="textPersonName" />
</RelativeLayout>