<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationForm.Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_txt_email"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_txt_password"
        android:paddingTop="20dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingTop="5dp"
        android:text="@string/btn_login"
        android:textSize="30sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="261dp"
        android:text="@string/btn_create_acc"
        android:textSize="30sp" />
</LinearLayout>